🐛 Fix infinite transaction distr overflow

--- a/styles/pages/Insights.module.scss
+++ b/styles/pages/Insights.module.scss
@@ -109,6 +109,7 @@
     display: flex;
     align-items: center;
     position: relative;
+    width: 100%;
     > h3 {
         position: absolute;
         left: 20px;
